possible fix for safari button alignment

--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -16,6 +16,7 @@
   font-weight: bolder;
   text-align: center;
   align-self: center;
+  display: inline-block;
 }
 
 .yes {
